# Market-lab

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
scripts/: bulk_ingest.py  demo.py
src/marketlab/: __init__.py  backtest.py  cli.py  config.py  webapp.py
src/marketlab/data/: bars.py  corporate_actions.py  ingest.py
src/marketlab/data/providers/: __init__.py  base.py  polygon.py  yfinance_provider.py
src/marketlab/data/storage/: __init__.py  base.py  parquet_store.py  postgres_store.py
src/marketlab/engine/: __init__.py  costs.py  event_driven.py  portfolio.py  types.py  vectorized.py
src/marketlab/metrics/: __init__.py  performance.py
src/marketlab/static/: landing.html
src/marketlab/strategies/: __init__.py  base.py  library.py  portfolio.py
tests/: conftest.py  test_corporate_actions.py  test_costs.py  test_engine_parity.py  test_lookahead.py  test_metrics.py  test_portfolio_parity.py  test_storage_and_schema.py
