[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "marketlab"
version = "0.1.0"
description = "A market-data pipeline and backtester built to expose why naive backtests lie."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Nicholas Baillargeon" }]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15",
    "psycopg[binary]>=3.1",
    "sqlalchemy>=2.0",
    "yfinance>=0.2",
    "requests>=2.31",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
web = ["dash>=2.16", "plotly>=5.20"]

[project.scripts]
marketlab = "marketlab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
